make tokens and offers page layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,24 +17,44 @@ body {
     width: 400px;
     height: 400px;
     background-color: #fff;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
 
 #token-display .card .card-header
 {
+    position: absolute;
+    top: 0;
+    width: 100%;
+
     border: none;
     display: flex;
     align-items: center;
+    z-index: 50;
+
+    font-weight: bolder;
+    color: white;
+}
+
+#token-display .card-body
+{
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    position: absolute;
+    z-index: 10;
     cursor: pointer;
 }
 
 #token-display .card-footer
 {
+    position: absolute;
     bottom: 0px;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     color: white;
+    z-index: 50;
 }
 
 #token-display .card .token-title
